--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -185,7 +185,19 @@ header{
 .main-nav li a:active{
     border-bottom: 2px solid #e67e22;
 }
+/*Features*/
+
+.section-features .long-copy{
+    margin-bottom: 30px;
+}
+
+/*-------------*/
 /*Meals*/
+/*---------------*/
+ 
+.section-meals{
+    padding: 0;
+}
 .meals-showcase{
     list-style: none;
     width:100%;
@@ -199,8 +211,18 @@ header{
 .meal-photo {
     width: 100%;
     margin:0;
+    overflow: hidden;
+    background-color: #000;
 }
 .meal-photo img{
+    opacity: 0.7;
     width:100%;
     height:auto;
+    transform: scale(1.15);
+    transition: transform 0.5s,opacity 0.5s;
+}
+
+.meal-photo img:hover{
+    opacity: 1;
+    transform: scale(1.03);
 }
